--- a/client/src/index.css
+++ b/client/src/index.css
@@ -82,6 +82,15 @@ these styles are pre-login */
   text-align: left;
 }
 
+.loginRegPageHeader {
+  width: 480px;
+  margin: auto;
+  margin-top: 64px;
+  text-align: center;
+  background: rgb(255,255,255);
+  background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(252,252,252,1) 100%);
+}
+
 .loginRegForm {
   width: 420px;
   text-align: left;
@@ -103,7 +112,7 @@ these styles are pre-login */
 
 .formTitle {
   text-align: center;
-  font-size: 36px;
+  font-size: 28px;
   font-weight: bold;
   padding: 0px 0px 40px 0px;
 }
