--- a/client/src/pages/PostLogin/Pets/Pets.css
+++ b/client/src/pages/PostLogin/Pets/Pets.css
@@ -1,4 +1,4 @@
-#NameText {
+.NameText {
     text-align: center;
     font-weight: 700px;
     font-size: 23;
@@ -104,15 +104,7 @@
     font-weight: bold;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-}
-
-#AddPetText {
     text-align: center;
-}    
-
-#AddPetLink {
-    text-decoration: none;
-    color: gray;
 }
 
 #PlusIcon {
