--- a/client/src/pages/PostLogin/Pets/Pets.css
+++ b/client/src/pages/PostLogin/Pets/Pets.css
@@ -57,13 +57,41 @@
     left: 0;
 }
 
+.PetCardImage {
+
+    width: 40px;
+    height: 40px;
+    border-radius: 40px;
+    object-fit: cover;
+    position: relative;
+    
+    left: 0;
+}
+
+#PetCardProfileContainer {
+    width: 22px;
+    height: 0px;
+    margin-top: 6px;
+}
+
+#PetCardCircle {
+    width: 42px;
+    height: 42px;
+    border-radius: 42px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: whitesmoke;
+    background-color: white;
+    position: relative;
+    transition: opacity .4s;
+}
+
 #PetText {
     text-align: center;
     font-weight: 700px;
     font-size: 23;
     padding-top: 45px;
     color: gray;
-    
 }
 
 #AddPetContainer {
