--- a/client/src/pages/PostLogin/Pets/Pets.css
+++ b/client/src/pages/PostLogin/Pets/Pets.css
@@ -30,7 +30,15 @@
 
 }
 
-#PetCircle {
+#PetAboutContainer {
+    width: 135px;
+    height: 135px;
+    margin-bottom: 5px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#PetCircle, #PetProfileCircle {
     width: 135px;
     height: 135px;
     border-radius: 135px;
