--- a/client/src/pages/PostLogin/Pets/Pets.css
+++ b/client/src/pages/PostLogin/Pets/Pets.css
@@ -50,8 +50,8 @@
 }
 
 #PetCircle:hover {
-    /*opacity: 50%;
-    transition: opacity .4s;*/
+    opacity: .5;
+    transition: opacity .4s;
 } 
 
 .PetImage {
