--- a/client/src/pages/PostLogin/Pets/Pets.css
+++ b/client/src/pages/PostLogin/Pets/Pets.css
@@ -1,23 +1,20 @@
 .NameText {
     text-align: center;
-    font-weight: 700px;
-    font-size: 23;
 }
 
 #PetLink {
     text-decoration: none;
-    color: gray;
-    display: inline-block;
+    /*color: gray;*/
+    color: #676767;
 }
 
 #PetContainer {
-    width: 135px;
-    height: 170px;
-    margin-top: 25px;
-    margin-bottom: 25px;
-    margin-left: 12.5px;
-    margin-right: 12.5px;
-
+    /*width: 135px;*/
+    /*height: 170px;*/
+    /*margin-top: 25px;*/
+    /*margin-bottom: 25px;*/
+    /*margin-left: 12.5px;*/
+    /*margin-right: 12.5px;*/
 }
 
 #PetProfileContainer {
@@ -43,7 +40,8 @@
     height: 135px;
     border-radius: 135px;
     border-style: solid;
-    border-color: gray;
+    /*border-color: gray;*/
+    border-color: #e8e8e8;
     position: relative;
     transition: opacity .4s;
     
@@ -51,7 +49,7 @@
 
 #PetCircle:hover {
     opacity: .5;
-    transition: opacity .4s;
+    transition: opacity .3s;
 } 
 
 .PetImage {
@@ -61,8 +59,9 @@
     border-radius: 129px;
     object-fit: cover;
     position: relative;
-    
+    background-color: #fdfdfd;
     left: 0;
+    box-shadow: 2px 2px 10px black;
 }
 
 .PetCardImage {
@@ -84,8 +83,10 @@
 
 #PetCardCircle {
     width: 42px;
-    height: 42px;
-    border-radius: 42px;
+    /*circle border was weirdly off-center, this fixed it*/
+    /*height: 42px;*/
+    /*border-radius: 42px;*/
+    border-radius: 50%;
     border-width: 1px;
     border-style: solid;
     border-color: whitesmoke;
@@ -96,8 +97,6 @@
 
 #PetText {
     text-align: center;
-    font-weight: 700px;
-    font-size: 23;
     padding-top: 45px;
     color: gray;
 }
@@ -117,11 +116,14 @@
     height: 135px;
     border-radius: 135px;
     border-style: solid;
-    border-color: gray;
+    /*border-color: gray;*/
+    border-color: #e8e8e8;
+    box-shadow: 2px 2px 10px black;
+    margin: 14px;
     position: relative;
 
-    transition: border-color .4s;
-    transition: background-color .4s;
+    transition: border-color .3s;
+    transition: background-color .3s;
     
 }
 
@@ -129,13 +131,13 @@
     background-color: lightgray;
     border-color: lightgray;
 
-    transition: border-color .4s;
-    transition: background-color .4s;
+    transition: border-color .3s;
+    transition: background-color .3s;
 } 
 
 .AddPetImage {
 
-    width: 129px;
+    /*width: 129px;*/
     height: 129px;
     border-radius: 129px;
     object-fit: cover;
