--- a/client/src/pages/PostLogin/Pets/Pets.css
+++ b/client/src/pages/PostLogin/Pets/Pets.css
@@ -2,11 +2,12 @@
     text-align: center;
 }
 
-#PetLink {
+#PetLink, #AddPetLink {
     text-decoration: none;
     /*color: gray;*/
     color: #676767;
 }
+
 
 #PetContainer {
     /*width: 135px;*/
