--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600;700&display=swap');
 
 html {
-  --COLOR_CORAL: #FF9389;
+  --COLOR_CORAL: #FF7B78;
   --COLOR_PALE_PINK: #EBD0CE;
-  --COLOR_CREAM: #F7ECEB;
-  --COLOR_WHITE: #F0F1F7;
-  --COLOR_GRAY: #DADBE6;
+  --COLOR_WHITE: #fbfbfb;
+  --COLOR_GRAY: #EEEEEE;
+  --COLOR_ROSE_GOLD: #E8C4B8;
+  --COLOR_BLUE: #52708A;
+  --COLOR_DARK: #24323D;
   background: var(--COLOR_GRAY);
 }
 
@@ -26,14 +28,13 @@ code {
 
 .fontWrap {
   font-family: 'Sora', sans-serif;
-  
+  background-color: var(--COLOR_GRAY);
 }
 
 .fullPageContainer {
   height: 100%;
   margin: auto;
   width: 1024px;
-  
 }
 
 .nopadding {
@@ -58,7 +59,6 @@ these styles are pre-login */
   background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(252,252,252,1) 100%);
   display: flex;
   align-content: flex-start;
-  justify-content: top;
 }
 
 .homePageHeaderItem {
@@ -173,7 +173,7 @@ these styles are pre-login */
 these styles are post-login */
 
 .mainPageHeaderBar {
-  background: black;
+  background: #000000;
   padding: 0px;
   border-color: rgb(19, 62, 172);
   border-bottom-style: solid;
@@ -205,16 +205,17 @@ these styles are post-login */
 .petTitle {
   font-weight: 100;
   font-size: 23px;
+  color: var(--COLOR_WHITE);
 }
 
 .recsTitle {
-  color: #3d72db;
+  color: var(--COLOR_CORAL);
   font-weight: 600;
   font-size: 24px;
 }
 
 .btn-mainpage-header {
-  color: white;
+  color: var(--COLOR_WHITE);
   background-color: rgba(0, 0, 0, 0);
   padding: 5px 16px;
   font-size: 16px;
@@ -233,10 +234,18 @@ these styles are post-login */
   transition: 0.23s;
 }
 
+.hiddenForm {
+  display: none;
+}
+
+.nav-tabs {
+  margin-top: 10px;
+}
+
 .navProfBar {
-  background: #3d72db;
+  background: var(--COLOR_BLUE);
   vertical-align: middle;
-  height: 56px;
+  /*height: 56px; removed because of weird artifact under pet card when loading new component*/
 }
 
 .navProf {
@@ -249,15 +258,15 @@ these styles are post-login */
 }
 
 .petsAccentBar {
-  background: #3d72db;
+  background: var(--COLOR_BLUE);
   vertical-align: middle;
   height: 6px;
 }
 
 .petProfileCard {
-  background-color: rgba(0, 255, 200, 0);
+  background-color: var(--COLOR_BLUE);
   text-align: left;
-  color: white;
+  color: var(--COLOR_WHITE);
   font-size: 14px;
   margin-top: 0px;
   border-color: #003da8;
@@ -267,7 +276,7 @@ these styles are post-login */
 }
 
 .petProfileNavBar {
-  background-color: rgba(200, 100, 200, 0);
+  background-color: var(--COLOR_BLUE);
   text-align: right;
   padding: 0px 0 2px 0;
   margin-top: 11px;
@@ -278,17 +287,17 @@ these styles are post-login */
   text-align: left;
   font-size: 14px;
   font-weight: 400;
-  margin-top: 18px;
+  margin-top: 9px;
 }
 
 .mainPageHeaderBar {
-  background: black;
+  background: var(--COLOR_DARK);
   padding: 0px;
 }
 
 .mainPageHeader {
   text-align: center;
-  background-color: rgba(200, 45, 40, 0);
+  background-color: var(--COLOR_DARK);
   height: 38px;
   width: 1024px;
   margin: 0 auto;
@@ -305,11 +314,7 @@ these styles are post-login */
   vertical-align: middle;
   border: none !important;
   outline: none !important;
-  color: white;
-}
-
-.btn-petprofile-nav:hover {
-  color: black;
+  color: var(--COLOR_WHITE);
   transition: 0.23s;
 }
 
@@ -318,8 +323,12 @@ these styles are post-login */
   transition: 0.1s;
 }
 
+.activeNav button, .btn-petprofile-nav:hover {
+  color: var(--COLOR_CORAL)
+}
+
 .back-btn-petprofile-nav {
-  background-color: rgba(57, 97, 207, 100);
+  background-color: var(--COLOR_CORAL);
   margin: 15px 4px;
   width: 28px;
   height: 28px;
@@ -342,17 +351,15 @@ these styles are post-login */
 }
 
 .petProfileBody {
-  border-style: solid;
-  border-color: white;
-  border-width: 0px 1px 2px 1px;
-  background: white;
+  background: var(--COLOR_WHITE);
   height: 400px;
   padding: 10px;
+  border-radius: 3px;
 }
 
 .petProfileWindow {
   border-style: solid;
-  border-color: white;
+  border-color: var(--COLOR_WHITE);
   border-width: 2px 1px 2px 1px;
 }
 
@@ -362,7 +369,7 @@ these styles are post-login */
 }
 
 .smallFont {
-  font-size: 12x;
+  font-size: 12px;
 }
 
 .shadowedBox {
@@ -371,6 +378,7 @@ these styles are post-login */
   border-width: 1px;
   border-style: solid;
   border-radius: 2px;
+  background-color: var(--COLOR_WHITE);
 }
 
 .currentWeightBox {
@@ -393,5 +401,9 @@ these styles are post-login */
   position: relative;
   width: 1024px;
   padding: 14px 20px 10px 20px;
-  background-color: rgb(255, 255, 255);
+  background-color: var(--COLOR_GRAY);
+}
+
+.nav-link.active {
+  background-color: var(--COLOR_WHITE) !important;
 }
