--- a/client/src/pages/PostLogin/Pets/Pets.css
+++ b/client/src/pages/PostLogin/Pets/Pets.css
@@ -51,19 +51,22 @@
     border-radius: 129px;
     object-fit: cover;
     position: relative;
-    background-color: #fdfdfd;
+    background-color: var(--COLOR_WHITE);
     left: 0;
     box-shadow: 2px 2px 10px black;
 }
 
 .PetCardImage {
-
-    width: 40px;
-    height: 40px;
-    border-radius: 40px;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    border-width: 1px;
+    border-style: solid;
+    border-color: whitesmoke;
+    box-shadow: 0px 0px 2px whitesmoke;
     object-fit: cover;
     position: relative;
-    
+    background-color: var(--COLOR_WHITE);
     left: 0;
 }
 
@@ -82,7 +85,7 @@
     border-width: 1px;
     border-style: solid;
     border-color: whitesmoke;
-    background-color: white;
+    background-color: var(--COLOR_BLUE);
     position: relative;
     transition: opacity .4s;
 }
