--- a/client/src/index.css
+++ b/client/src/index.css
@@ -145,6 +145,10 @@ these styles are pre-login */
   font-size: 14px;
 }
 
+.modal-content {
+  background-color: var(--COLOR_WHITE) !important;
+}
+
 .formBox {
   background-color: var(--COLOR_WHITE);
   width: 480px;
@@ -156,7 +160,7 @@ these styles are pre-login */
 .formBoxAddEvent {
   background-color: var(--COLOR_WHITE);
   text-align: left;
-  border-color: white;
+  border-color: var(--COLOR_WHITE);
   border-style: solid;
   border-width: 2px;
 }
@@ -611,4 +615,14 @@ these styles are post-login */
 @-ms-keyframes slideOut {
   0% {height: 60px;}
   100% {height: 6px;}
+}
+
+.FormSelect {
+  width: 100%;
+  margin-right: -50%;
+  height: 40px;
+}
+
+.FormAddButton {
+  float: right;
 }
