--- a/client/src/index.css
+++ b/client/src/index.css
@@ -534,6 +534,11 @@ these styles are post-login */
   border-color: var(--COLOR_DARK) !important;
 }
 
+.ProfileBtn:focus {
+  outline: none !important;
+  box-shadow: none !important;
+}
+
 .ProfileBtn:hover {
   background-color: var(--COLOR_DARK) !important;
   color: var(--COLOR_WHITE) !important;
